src/tests/functionality/assignment_5_functions_headers/valid/09_mandatory_define_integer_replacement.c
#define LIMIT 7

int main() {
    int x = LIMIT;
    return x;
}
