src/tests/functionality/assignment_5_functions_headers/invalid_semantic/04_mandatory_return_type_mismatch_float_to_int_pointer.c
int *bad() {
    int x = 5;
    return x;
}

int main() {
    return 0;
}
